--- a/BuildServer/application.nuspec
+++ b/BuildServer/application.nuspec
@@ -8,6 +8,6 @@
         <description>Application package</description>
     </metadata>
     <files>
-        <file src=".\" target="" />
+        <file src="..\*.*" target="" />
     </files>
 </package>
