--- a/BuildServer/application.nuspec
+++ b/BuildServer/application.nuspec
@@ -7,4 +7,7 @@
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>Application package</description>
     </metadata>
+    <files>
+        <file src="..\*.*" target="" />
+    </files>
 </package>
